//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Voyager" {
  database_type: 'PostgreSQL'
  Note: 'Better In/Out-Processing'
}

Table units {
  id Int [pk, increment]
  name String [unique, not null]
  abbrev String
  kind UnitKind [not null]
  img String [not null]
  function String
  location String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  parentID Int [note: 'Define possible relationship with parent Unit
Rename collumn to conform to SQL naming conventions']
  parent Unit
  grandParentID Int [note: 'Define possible relationship with grandparent Unit
Rename collumn to conform to SQL naming conventions']
  grandParent Unit
  installationID Int [note: 'Define possible relationship with installation Unit
Rename collumn to conform to SQL naming conventions']
  installation Unit
  children Unit [not null, note: 'One-to-Many Relationships']
  grandChildren Unit [not null]
  installationChildren Unit [not null]
  assignedUsers User [not null]
  gainingUsers User [not null]
  tasks Task [not null]
}

Table roles {
  id Int [pk, increment]
  kind RoleKind [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  users User [not null, note: 'One-to-Many relationships']
}

Table users {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  dsn String
  assignedOfficeSymbol String [not null]
  gainingOfficeSymbol String
  status ProcessingStatus [not null]
  separationDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  assignedUnitID Int [note: 'Define possible relationship with Unit
Rename collumn to conform to SQL naming conventions']
  assignedUnit Unit
  gainingUnitID Int [note: 'Define possible relationship with Unit
Rename collumn to conform to SQL naming conventions']
  gainingUnit Unit
  roleID Int [note: 'Define possible relationship with Role
Rename collumn to conform to SQL naming conventions']
  role Role
  supervisorID Int [note: 'Define possible relationship with User
Rename collumn to conform to SQL naming conventions']
  supervisor User
  subordinates User [not null, note: 'One-to-Many relationships']
  tasksAssigned Task [not null]
  taskApproverTasks Task [not null]
  tasks TaskUser [not null, note: 'Many-to-Many relationships']
}

Table tasks {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  isActive Boolean [not null]
  kind TaskProcessingKind [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  assignerID Int [note: 'Define possible relationship with User
Rename collumn to conform to SQL naming conventions']
  assigner User
  approverID Int [note: 'Define possible relationship with User
Rename collumn to conform to SQL naming conventions']
  approver User
  unitID Int [note: 'Define possible relationship with User
Rename collumn to conform to SQL naming conventions']
  unit Unit
  assignedTasks TaskUser [not null, note: 'Many-to-Many relationships']
}

Table task_users {
  id Int [pk, increment]
  progress TaskStatus [not null]
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  taskID Int [not null, note: 'Define relationship with Task
Rename collumn to conform to SQL naming conventions']
  task Task [not null]
  userID Int [not null, note: 'Define relationship with User
Rename collumn to conform to SQL naming conventions']
  user User [not null]
}

Enum UnitKind {
  INSTALLATION
  COMMAND
  DELTA
  SQUADRON
}

Enum ProcessingStatus {
  IN_PROCESSING
  IN_TRANSIT
  OUT_PROCESSING
  OUT_PROCESSING_WITH_ORDERS
  STATIONARY
}

Enum RoleKind {
  USER
  TASK_APPROVER
  SITE_ADMIN
  COMMAND_ADMIN
  INSTALLATION_ADMIN
  DELTA_ADMIN
  SQUADRON_ADMIN
}

Enum TaskStatus {
  NOT_STARTED
  IN_PROGRESS
  COMPLETED
}

Enum TaskProcessingKind {
  IN_PROCESSING
  OUT_PROCESSING
}

Ref: Unit.parentID - Unit.id [delete: Set Null]

Ref: Unit.grandParentID - Unit.id [delete: Set Null]

Ref: Unit.installationID - Unit.id [delete: Set Null]

Ref: User.assignedUnitID > Unit.id [delete: Set Null]

Ref: User.gainingUnitID > Unit.id [delete: Set Null]

Ref: User.roleID > Role.id [delete: Set Null]

Ref: User.supervisorID - User.id [delete: Set Null]

Ref: Task.assignerID > User.id [delete: Set Null]

Ref: Task.approverID > User.id [delete: Set Null]

Ref: Task.unitID > Unit.id [delete: Set Null]

Ref: TaskUser.taskID > Task.id [delete: Cascade]

Ref: TaskUser.userID > User.id [delete: Cascade]